# musimo

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/components/: audio-upload-card.jsx
client/src/components/Brand/: LogoText.jsx
client/src/components/misc/: GlobalLoader.jsx  SmartImage.jsx
client/src/components/ui/: avatar.jsx  badge.jsx  breadcrumb.jsx  button.jsx  dropdown-menu.jsx  file-upload.jsx  input-group.jsx  lamp.jsx  moving-border.jsx  navigation-menu.jsx  pagination.jsx  separator.jsx  sidebar.jsx  slider.jsx  tooltip.jsx
client/src/features/debug/: availableTests.js  (+2 more)
server/: .dockerignore  .gitignore  Dockerfile  alembic.ini  database_schema.sql  main.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/src/core/: app_factory.py  app_registry.py  audio_file_sweeper.py  bootstrap.py  cleanup_expired_audio.py  db_connect.py  error_hooks.py  error_setup.py  global_error_hook.py  jwt.py  lazy_loads.py  lifespan.py  logger_setup.py  pretty_errors.py  security.py  separation_jobState.py  settings.py  supabase.py  supabase_connect.py
server/src/database/: base.py  enums.py  mixins.py  session.py
server/src/database/migrations/: env.py
server/src/database/migrations/versions/: 12f4403aac97_some_minor_fixes.py  27b0de89d182_project_1_analysis_records.py  359a4b457a1c_audio_no_longer_unique_to_project.py  363ff2019254_placeholder.py  363ff2019254_project_audio_seperatedaudio_.py  3ac699e8c8d8_minor_fixes.py  40c21d0ab8a6_add_scheduled_deletion_at_and_pending_.py  54a014618168_analysis_record_project_relation_.py  59d66eab4878_user_add_is_verified_prop.py  5a61c97c8f47_projectid_index.py  626f0e064ec7_fix_nullable_audio_file_fields.py  8897be2b14cc_relationship_mismatch_fix.py  9d41e3193304_added_file_size_prop_audio_file.py  a2c99c522c88_refresh_token_add_user_agent_metadata.py  bf01dc499855_summary_text_type_change_from_text_to_.py  ce36d80651df_create_users_table.py  de909992388f_create_musimo_schema.py  f0503148a3c1_add_separation_status_to_separation_.py  f7e406039d4d_initial_schema.py
server/src/database/models/: __init__.py  analysis_job.py  analysis_record.py  analysis_result.py  audio.py  audio_feature.py  audio_file.py  enum.py  log.py  mixins.py  model.py  otp.py  project.py  refresh_token.py  separated_source.py  seperated_source.py  user.py
server/src/middlewares/: cors.py  error_handler.py  exception_handler.py  performance.py  response_handler.py
server/src/models/: model_service.py  progress_tracker.py  pydantic.py
server/src/models/Instrument_recognition/: config.py  instrument_pipeline.py
server/src/models/Instrument_recognition/pipeline/: embeddings.py  inference.py  postprocessor.py  preprocessor.py
server/src/models/audio_separation/: file_utils.py  progress.py
server/src/models/audio_separation/app/pipelines/: separation.py
server/src/models/audio_separation/app/routes/: audio.py
server/src/models/audio_separation/app/utils/: file_utils.py
server/src/models/audio_separation/pipelines/: separation.py
server/src/models/emotion_recognition/: config.py  emotion_pipeline.py
server/src/models/emotion_recognition/pipeline/: embedding.py  inference.py  postprocessor.py  preprocessor.py
server/src/repo/: analysisRepo.py  audioFeatureRepo.py  audioFileRepo.py  featureanalysisrepo.py  projectRepo.py
server/src/routes/: __init__.py  analysis.py  audio_features.py  audio_file.py  auth.py  debug.py  model.py  predict.py  project.py  separate_audio.py  system.py  transaction.py  user.py  ws_router.py
server/src/routes/websocket/: emotion.py  utils.py  ws_router.py
server/src/schemas/: __init__.py  analysis.py  analysis_record.py  audioFile.py  audioSeparation.py  auth.py  errors.py  modelPrediction.py  otp.py  project.py  schemas.py  token.py  transaction.py  user.py
server/src/schemas/api/: error.py  request.py  response.py
server/src/services/: analysis_service.py  audio_feature_service.py  audio_file.py  audio_service.py  auth_service.py  celery_app.py  config.py  database_client.py  dependencies.py  email_service.py  emotion_workflow_service.py  instrument_workflow_service.py  llm_service.py  otp_service.py  project.py  project_service.py  stem_service.py  stem_tasks.py
server/src/utils/: auth_utils.py  db_util.py  env_check.py  password_utils.py  token_utils.py
(+111 files in other folders)
