[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "black>=26.5.0",
    "celery>=5.6.3",
    "demucs>=4.0.1",
    "fastapi[standard]>=0.136.1",
    "google-genai>=2.4.0",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "numpy>=2.4.5",
    "pretty-errors>=1.2.25",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "ruff>=0.15.13",
    "sqlalchemy>=2.0.49",
    "supabase>=2.30.0",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.12.0",
]
